# NekiVK

./: CMakeLists.txt  README.md  vcpkg.json
Tests/: ModelTest.cpp  ModelTest.h
Tests/Shaders/: model.frag  model.vert  modelTextureless.frag
include/NekiVK/: NekiVK.h
include/NekiVK/Core/: VulkanCommandPool.h  VulkanDescriptorPool.h  VulkanDevice.h  VulkanGraphicsPipeline.h  VulkanPipeline.h  VulkanRenderManager.h  VulkanSwapchain.h
include/NekiVK/Debug/: VKDebugAllocator.h  VKLogger.h  VKLoggerConfig.h
include/NekiVK/Memory/: BufferFactory.h  ImageFactory.h  ModelFactory.h
include/NekiVK/Utils/Loaders/: ImageLoader.h  ModelLoader.h
include/NekiVK/Utils/Strings/: format.h
include/NekiVK/Utils/Templates/: enum_enable_bitmask_operators.h
src/Core/: VulkanCommandPool.cpp  VulkanDescriptorPool.cpp  VulkanDevice.cpp  VulkanGraphicsPipeline.cpp  VulkanPipeline.cpp  VulkanRenderManager.cpp  VulkanSwapchain.cpp
src/Debug/: VKDebugAllocator.cpp  VKLogger.cpp  VKLoggerConfig.cpp
src/Memory/: BufferFactory.cpp  ImageFactory.cpp  ModelFactory.cpp
src/Utils/Loaders/: ImageLoader.cpp  ModelLoader.cpp
src/Utils/Strings/: format.cpp
